--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,10 @@
     <title>Document</title>
     <link rel="stylesheet" href="src/styles/main.css">
 </head>
+
 <body>
+    <article id="container"></article>
     <script src="/src/scripts/main.js"></script>
 </body>
+
 </html>
